Chapter flowchart, split background into HIV/AIDS and Bayes, hierarchical structure diagram, more background on HIV/AIDS

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -48,8 +48,16 @@ Each project chapter is accompanied by code, hosted on GitHub.
 
 ## Chapter overview
 
-* Chapter \@ref(background): I start by reviewing the required background for the rest of the thesis, namely regarding the HIV/AIDS epidemic and Bayesian spatio-temporal statistics.
+* Chapter \@ref(background): I start by providing useful setting and motivation of the rest of this thesis.
+* Chapter \@ref(bayes-st): Introduces the statistical concepts and notation used throughout the thesis.
 * Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was designed with analysis of a grid of pixels in mind. In disease mapping, we work using the districts of a country, which are not a grid. I evaluate the practical consequences of this this concern [@howes2023beyond].
 * Chapter \@ref(multi-agyw): Adolescent girls and young women are a demographic group at disproportionate risk of HIV infection. The Global AIDS Strategy suggests prioritising interventions on the basis of behaviour to prevent the most new infections using available resources. I estimate the size of behavioural risk groups across priority countries to enable implementation of this strategy, and assess the potential benefits in terms of numbers of new infections prevented [@howes2023spatio].
 * Chapter \@ref(naomi-aghq): The Naomi small-area estimation model [@eaton2021naomi] is used by countries to estimate district-level HIV indicators. With this motivation, I develop an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast]. I apply the method to data from Malawi, and analyse the consequence of inference method choice for policy relevant outcomes. Further, I open the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
 * Chapter \@ref(conclusions): I discuss avenues for future work, and my conclusions regarding the research.
+
+Figure \@ref(fig:chapter-flowchart) gives the dependency structure for the above chapters.
+The original work (Chapter \@ref(beyond-borders), Chapter \@ref(multi-agyw) and Chapter \@ref(naomi-aghq)) may be read in any order.
+
+```{r chapter-flowchart, fig.cap="Flowchart presenting the recommended chapter dependencies for the thesis. The dashed line represents a recommended, but not required dependency. Each of the chapters in the block can be read in any order, though the order presented is recommended."}
+knitr::include_graphics("figures/chapter-flowchart.pdf")
+```
