--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -19,8 +19,7 @@ bibliography: references.bib
 
 In this chapter I describe a novel Bayesian inference method I developed with the aim of facilitating fast and accurate inference for the Naomi small-area estimation model.
 This work builds on that of others, including @rue2009approximate, @kristensen2016tmb and @stringer2021fast.
-I began working on this project in 2020, but did not make significant progress until I read Alex Stringer's work.
-We later began collaborating, including Alex supervising my visit to the University of Waterloo in 2022.
+I began working on this project in 2020, but did not make significant progress until I read Alex Stringer's work in 2021, and later visited the University of Waterloo to collaborate in 2022.
 The results are presented in @howes2023fast.
 
 Code for the analysis in this chapter is available from [`athowes/naomi-aghq`](https://github.com/athowes/elgm-inf) and supported by the R package [`inf.utils`](https://athowes.github.io/inf.utils).
