--- a/references.bib
+++ b/references.bib
@@ -696,3 +696,24 @@ URL= {https://www.r-inla.org/faq},
   year={2020},
   publisher={Oxford University Press}
 }
+
+@article{stover2021impact,
+  title={The impact of condom use on the HIV epidemic},
+  author={Stover, John and Teng, Yu},
+  journal={Gates Open Research},
+  volume={5},
+  year={2021},
+  publisher={Gates Foundation-Open Access}
+}
+
+@article{gelman2017prior,
+  title={The prior can often only be understood in the context of the likelihood},
+  author={Gelman, Andrew and Simpson, Daniel and Betancourt, Michael},
+  journal={Entropy},
+  volume={19},
+  number={10},
+  pages={555},
+  year={2017},
+  publisher={MDPI}
+}
+
